# actix-diesel-starter

./: .dockerignore  Cargo.toml  Dockerfile  diesel.toml
kubernetes/: db-configmap.yaml  db-deployment.yaml  db-persistent-volume-claim.yaml  db-service.yaml  persistent-volume.yaml  web-deployment.yaml
migrations/2025-05-28-110144_create_events/: up.sql
src/: main.rs
src/handlers/: handlers.rs
src/models/: event.rs
src/repository/: database.rs
